# Multiple_Agents-Crewai-project

./: README.md  pyproject.toml
src/peom/: Knowledge.py  main.py
src/peom/crews/poem_crew/: multi_crew easy.py  poem_crew.py
src/peom/crews/poem_crew/config/: agents.yaml  tasks.yaml
